crates/ox-cli/tests/snapshots/settings_e2e__auth_cycle_repro_after_one_cycle.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_after_one"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▾ anthropic                                                                 │
│  anthropic · https://api.anthropic.com                                       │
│      Name: anthropic                                                         │
│      Protocol: anthropic                                                     │
│      Endpoint: https://api.anthropic.com                                     │
│      Auth: ◂ x-api-key  bearer-token  none ▸                                 │
│      Key: (set)                                                              │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                        ? help│
└──────────────────────────────────────────────────────────────────────────────┘
