crates/ox-cli/tests/snapshots/settings_e2e__auth_cycle_repro_before.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1510
expression: "&frame_before"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▾ anthropic                                                                 │
│  anthropic · https://api.anthropic.com                                       │
│      Name: anthropic                                                         │
│      Protocol: anthropic                                                     │
│      Endpoint: https://api.anthropic.com                                     │
│      Auth: ◂ none  x-api-key  bearer-token ▸                                 │
│      Key: (set)                                                              │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
