crates/ox-cli/tests/snapshots/settings_e2e__compose_after_commit.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1465
expression: "&frame_after"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▾ my-personal                                                               │
│  anthropic · https://api.example.com                                         │
│      Name: my-personal                                                       │
│      Protocol: anthropic                                                     │
│      Endpoint: https://api.example.com                                       │
│      Auth: x-api-key                                                         │
│      Key: (set)                                                              │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
