crates/ox-cli/tests/snapshots/settings_e2e__compose_full_draft.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1397
expression: "&frame_full"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▸ Connections [0]                                                             │
│Name: my-personal                                                             │
│Protocol: < anthropic >                                                       │
│Endpoint: https://api.example.com                                             │
│Auth: < x-api-key >                                                           │
│Key: •••••••  required for x-api-key / bearer-token                           │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
