crates/ox-cli/tests/snapshots/settings_e2e__compose_open.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_open"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▸ Connections [0]                                                             │
│    + New connection (Tab to navigate, Enter to create, Esc to cancel)        │
│    Name:   required                                                          │
│    Protocol: (not selected)  select a protocol                               │
│    Endpoint:   required                                                      │
│    Auth: (not selected)  select an auth scheme                               │
│    Key:   required for x-api-key / bearer-token                              │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                        ? help│
└──────────────────────────────────────────────────────────────────────────────┘
