crates/ox-cli/tests/snapshots/settings_e2e__compose_protocol_selected.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1359
expression: "&frame_protocol"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│Name: my-personal                                                             │
│Protocol: < anthropic >                                                       │
│Endpoint:   required                                                          │
│Auth: (not selected)  select an auth scheme                                   │
│Key:   required for x-api-key / bearer-token                                  │
│▸ Connections [0]                                                             │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
