crates/ox-cli/tests/snapshots/settings_e2e__compose_typed_name.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
assertion_line: 1350
expression: "&frame_typed"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▸ Connections [0]                                                             │
│Name: my-personal                                                             │
│Protocol: (not selected)  select a protocol                                   │
│Endpoint:   required                                                          │
│Auth: (not selected)  select an auth scheme                                   │
│Key:   required for x-api-key / bearer-token                                  │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
