crates/ox-cli/tests/snapshots/settings_e2e__delete_repro_after_d_pressed.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_after_d"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│Delete 'anthropic'? y / n                                                     │
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▸ anthropic                                                                 │
│  anthropic · https://api.anthropic.com                                       │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
