crates/ox-cli/tests/snapshots/settings_e2e__delete_repro_after_y_pressed.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_after_y"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [0]                                                             │
│    + New connection                                                          │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
