crates/ox-cli/tests/snapshots/settings_e2e__delete_repro_before_delete.snap
---
source: crates/ox-cli/tests/settings_e2e.rs
expression: "&frame_before"
---
┌Settings──────────────────────────────────────────────────────────────────────┐
│▾ Connections [1]                                                             │
│    + New connection                                                          │
│  ▸ anthropic                                                                 │
│  anthropic · https://api.anthropic.com                                       │
│▸ Models                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
